@@ -6,6 +6,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="shortcut icon" href="images/logo-head.png" />
+		<link rel="icon" href="images/logo-head.png" />
 		
 		<!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KY2CTTZXHG"></script>
